# traffic-detection

./: README.md
video-detector/: detector.cpp  detector.h  framedetectionworker.cpp  framedetectionworker.h  videoplayer.cpp  videoplayer.h  videosurface.cpp  videosurface.h
video-detector-2/: CMakeLists.txt  detector.cpp  framedetectionworker.cpp  videoplayer.cpp  videoplayer.h  videosurface.cpp  videosurface.h
video-detector/video-detector-2/: CMakeLists.txt  detector.cpp  detector.h  main.cpp  videoplayer.cpp  videoplayer.h  videosurface.cpp  videosurface.h
yolo-custom/: detect.py  models.py  quantization.py  train.py
yolo-custom/config/: custom.data  custom.names  yolov3-tiny.cfg
yolo-custom/utils/: datasets.py  parse_config.py  utils.py
